@@ -18,7 +18,9 @@ Version 0.3q
  - Spring water can be found in the forest.
  - Hummus can be bought from Patchwork (and sometimes Cale).
  - Letter can be found in a Rigard event.
-* There is a new short scene between terry and Orvin, if you have him in your party. Thanks LD and Del for the help!
+* There is a new short scene between Terry and Orvin, if you have him in your party. Thanks LD and Del for the help!
+* Revised Miranda's tavern prompt, which was a mess.
+ - The 'conquests' option now has a new interaction with Terry, if he's in your party. Thanks for the help LD!
 
 --------------------------------------------
              PREVIOUS VERSIONS
